tests/neg/i2564b.scala
class Foo private() {
  inline def foo = new Foo // error
}
